--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.barpad"
+    package="com.example.helloworld"
     android:versionCode="1"
     android:versionName="1.0" >
 
@@ -9,13 +9,14 @@
         android:targetSdkVersion="18" />
 
     <application
-        android:name="com.example.barpad.GlobalValues"
         android:allowBackup="true"
         android:icon="@drawable/barpad"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme"
+        android:name="com.example.helloworld.GlobalValues" >
+        
         <activity
-            android:name="com.example.barpad.MainActivity"
+            android:name="com.example.helloworld.MainActivity"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,24 +25,35 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="com.example.barpad.RegisterActivity"
+            android:name="com.example.helloworld.RegisterActivity"
             android:label="@string/title_activity_register"
-            android:parentActivityName="com.example.barpad.MainActivity"
-            android:windowSoftInputMode="adjustResize|stateVisible" >
+            android:parentActivityName="com.example.helloworld.MainActivity"
+            android:windowSoftInputMode="adjustResize|stateVisible">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.helloworld.MainActivity" />
         </activity>
         <activity
-            android:name="com.example.barpad.CountActivity"
+            android:name="com.example.helloworld.CountActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:label="@string/title_activity_count"
-            android:parentActivityName="com.example.barpad.RegisterActivity"
+            android:parentActivityName="com.example.helloworld.RegisterActivity"
             android:theme="@style/FullscreenTheme" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.example.helloworld.RegisterActivity" />
         </activity>
+         <activity
+            android:name="com.example.helloworld.LoginActivity"
+            android:label="@string/title_activity_login"
+            android:parentActivityName="com.example.helloworld.RegisterActivity"
+            android:theme="@style/FullscreenTheme" 
+            android:windowSoftInputMode="adjustResize|stateVisible">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.example.helloworld.RegisterActivity" />
+        </activity>
+         
     </application>
 
 </manifest>
